--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fampay",
   "version": "0.1.0",
+  "homepage":"http://manasgond.github.io/fampay",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -43,6 +44,8 @@
     "winwheel": "^1.0.1"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "react-scripts build",
     "commit": "git-cz",
     "eject": "NODE_PATH=src/ react-scripts eject",
@@ -102,5 +105,8 @@
       "stylelint-config-recommended",
       "stylelint-config-styled-components"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
